--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -184,6 +184,7 @@
           var row = document.getElementById(id);
           if (row) {
             row.style.fontWeight = 'bold';
+            row.style.backgroundColor = '#f8f8f8';
           }
         }
       });
