--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -176,6 +176,19 @@
     </div>
     <script src="{{ '/assets/js/scale.fix.js' }}"></script>
 
+    <script>
+      document.addEventListener("DOMContentLoaded", function() {
+        var hash = window.location.hash;
+        if (hash) {
+          var id = hash.substring(1);
+          var row = document.getElementById(id);
+          if (row) {
+            row.style.fontWeight = 'bold';
+            row.style.backgroundColor = '#f8f8f8';
+          }
+        }
+      });
+    </script>
 
   <style type="text/css">
   ul.share-buttons{
